# ev3dev-lang-python

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README.rst  api-update.sh  demo-auto-drive.py  demo-lcd.py  ev3dev_utils.py  git_version.py  hatch_an_egg.sh  package-deb.sh  pyev3dev.cpp  setup.py  spec_version.py
debian/: changelog  control  copyright  files  rules  watch
demo/: auto-drive.py  dog_bark.rsf  lcd.py  mindstorms_widgets.py  mindstorms_widgets_demo.py  motor-control.py  remote-control.py  thereminvox.py  track-line.py
docs/: Makefile  conf.py  index.rst
ev3dev/: __init__.py  pyev3dev.cpp
ev3dev_utils/: lcd.py  motors.py
